--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ZXX">
 
 <head>
-	<title>COAGEX - Creative Agency Template</title>
+	<title>Imam Rianto</title>
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -66,8 +66,7 @@
 							<!--header text-->
 							<div class="intro-text">
 								<h1 data-aos="slide-right" data-aos-anchor-placement="top-bottom" data-aos-delay="700" data-aos-duration="1200"> <img src="img/logo.png" alt="imamrianto" width="100px"></h1>
-								<p data-aos="fade-in" data-aos-anchor-placement="top-bottom" data-aos-delay="1500" data-aos-duration="1200">Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br>
-									Quod ab tenetur itaque ullam repellendus ipsum! Nesciunt, <br> deserunt porro nihil culpa illo deleniti.</p>
+								<p data-aos="fade-in" data-aos-anchor-placement="top-bottom" data-aos-delay="1500" data-aos-duration="1200">My name is Imam Rianto. I’m UI/UX Designer based in Jakarta. I have more than 1 years experience as UI/UX Designer. Please check my portfolio at behance and dribbble. </p>
 								<div class="learnmore" data-aos="fade-in" data-aos-anchor-placement="top-bottom" data-aos-delay="1500" data-aos-duration="1200">
 									<a href="#" class="skill-btn">Download CV</a>
 								</div>
