--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ZXX">
 
 <head>
-	<title>Imam Rianto</title>
+	<title>COAGEX - Creative Agency Template</title>
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -66,24 +66,23 @@
 							<!--header text-->
 							<div class="intro-text">
 								<h1 data-aos="slide-right" data-aos-anchor-placement="top-bottom" data-aos-delay="700" data-aos-duration="1200"> <img src="img/logo.png" alt="imamrianto" width="100px"></h1>
-								<p data-aos="fade-in" data-aos-anchor-placement="top-bottom" data-aos-delay="1500" data-aos-duration="1200">My name is Imam Rianto. I’m UI/UX Designer based in Jakarta.<br>
+								<p data-aos="fade-in" data-aos-anchor-placement="top-bottom" data-aos-delay="1500" data-aos-duration="1200">My name is Imam Rianto. I’m UI/UX Designer based in Jakarta. <br>
 									I have more than 1 years experience as UI/UX Designer.<br>
-									Please check my portfolio at behance and dribbble. </p>
+									Please check my portfolio at dribbble.</p>
+
 								<div class="learnmore" data-aos="fade-in" data-aos-anchor-placement="top-bottom" data-aos-delay="1500" data-aos-duration="1200">
 									<a href="#" class="skill-btn">Download CV</a>
+									<div class="learnmore2">
+										<a href="https://www.dribbble.com/imamrianto" class="skill-btn-youtube popup-youtube"><i class="fas fa-basketball-ball"></i></a>
+									</div>
 								</div>
+								
 							</div>
 						</div>
 						<!--header artwork-->
 						<div class="header-1-artwork">
 							<div class="layer">
 								<img src="img/header-1-artwork.png" alt="">
-								<div class="layer-1" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-delay="800" data-aos-duration="1000">
-									<img src="img/man-in-board.png" alt="">
-								</div>
-								<div class="layer-2" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-delay="800" data-aos-duration="1000">
-									<img src="img/man-in-pc.png" alt="">
-								</div>
 								<div class="layer-3">
 									<img src="img/spin.png" alt="">
 								</div>
