--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ZXX">
 
 <head>
-	<title>COAGEX - Creative Agency Template</title>
+	<title>Imam Rianto</title>
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
