--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 								<div class="learnmore" data-aos="fade-in" data-aos-anchor-placement="top-bottom" data-aos-delay="1500" data-aos-duration="1200">
 									<a href="https://github.com/imamrianto/imamrianto.github.io/blob/master/CV_ImamRianto.pdf" class="skill-btn">Download CV</a>
 									<div class="learnmore2">
-										<a href="https://www.dribbble.com/imamrianto" class="skill-btn-youtube popup-youtube"><i class="fas fa-basketball-ball"></i></a>
+										<a href="https://www.dribbble.com/imamrianto" class="skill-btn-youtube target="_blank"><i class="fas fa-basketball-ball"></i></a>
 									</div>
 								</div>
 								
